syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.zup.grpc.car";
option java_outer_classname = "Protobuf";
option objc_class_prefix = "HLW";

package com.zup.grpc;

service CarService {
  rpc register(CarRequest) returns (CarResponse){}
}

message CarRequest{
  string model = 1;
  string plate = 2;

}

message CarResponse{
  int64 id = 1;
  string plate = 2;
}
